<resources>
    <string name="app_name">MyAgenda</string>
    <string name="title_activity_main3">Items</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>

    <string name="detail_edit">Edit</string>
    <string name="detail_trash">Trash</string>
    <string name="detail_send">Send</string>
    <string name="detail_call">Call</string>

    <string name="num">Phone Number: </string>
    <string name="mail">E-mail: </string>
    <string name="communication">
        <u>Communication</u>
    </string>

     <string name="contactUs">
        <u>Contact Us</u>
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_edit_note">EditNoteActivity</string>
</resources>
