<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="100dp"
        android:layout_marginTop="40dp"
        card_view:cardBackgroundColor="#FFA500">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/textView_detail_date"
                android:layout_marginTop="20dp"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:textAllCaps="true"
                android:id="@+id/textView_detail_title"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/textView_detail_description"
                android:layout_below="@+id/textView_detail_title"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/textView_detail_address"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="address"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView_detail_description"/>

            <Button
                android:id="@+id/btn_line"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/textView_detail_description"
                android:background="#000"/>

            <TextView
                android:id="@+id/communication"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@id/btn_line"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:text="@string/communication"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/contact"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@id/communication"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:text="@string/num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/textView_detail_contact"
                android:layout_marginStart="2dp"
                android:layout_below="@+id/communication"
                android:layout_toEndOf="@id/contact"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/contract_mail"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@id/textView_detail_contact"
                android:layout_alignParentStart="true"
                android:layout_marginTop="3dp"
                android:text="@string/mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:layout_marginTop="3dp"
                android:layout_below="@id/textView_detail_contact"
                android:id="@+id/textView_detail_email"
                android:layout_marginStart="2dp"
                android:layout_toEndOf="@id/contract_mail"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>